Fix(GC): Remove healthcheck

--- a/clusters/galaxy-cluster/kubernetes/apps/default/invidious/app/helm-values.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/default/invidious/app/helm-values.yaml
@@ -89,3 +89,7 @@ companion:
     accessMode: ReadWriteOnce
     # -- Storage class name (leave empty to use default)
     storageClass: "openebs-hostpath"
+
+healthcheck:
+  # -- Enable health checks for the application
+  enabled: false
