--- a/clusters/galaxy-cluster/kubernetes/apps/default/invidious/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/default/invidious/app/helmrelease.yaml
@@ -33,3 +33,13 @@ spec:
   valuesFrom:
     - kind: ConfigMap
       name: invidious-values
+  postRenderers:
+    - kustomize:
+        patches:
+          - target:
+              kind: Service
+              name: invidious
+            patch: |
+              - op: replace
+                path: /spec/ports/0/targetPort
+                value: 3000
