--- a/clusters/galaxy-cluster/kubernetes/apps/default/invidious/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/default/invidious/app/helmrelease.yaml
@@ -5,7 +5,7 @@ metadata:
   name: invidious
 spec:
   interval: 1h
-  url: https://ildoc.github.io/invidious-helm-chart/
+  url: https://charts-helm.invidious.io
 ---
 # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/helm.toolkit.fluxcd.io/helmrelease_v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
@@ -18,10 +18,11 @@ spec:
   chart:
     spec:
       chart: invidious
-      version: v3.0.0
+      version: v3.1.0
       sourceRef:
         kind: HelmRepository
-        name: invidious
+        name: charts-plutode
+        namespace: flux-system
   install:
     remediation:
       retries: 3
@@ -33,13 +34,3 @@ spec:
   valuesFrom:
     - kind: ConfigMap
       name: invidious-values
-  postRenderers:
-    - kustomize:
-        patches:
-          - target:
-              kind: Service
-              name: invidious
-            patch: |
-              - op: replace
-                path: /spec/ports/0/targetPort
-                value: 3000
