--- a/clusters/galaxy-cluster/kubernetes/apps/default/sparkyfitness/app/external-secret.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/default/sparkyfitness/app/external-secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: prowlarr-secrets
+  name: sparkyfitness-secrets
 spec:
   refreshInterval: 300s
   secretStoreRef:
