Fix(GC): Add nginx config dir for sparky

--- a/clusters/galaxy-cluster/kubernetes/apps/default/sparkyfitness/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/default/sparkyfitness/app/helmrelease.yaml
@@ -128,4 +128,11 @@ spec:
                 readOnly: false
       tmp:
         type: emptyDir
+      nginx:
+        type: emptyDir
+        advancedMounts:
+          sparky-frontend:
+            frontend-app:
+              - path: /etc/nginx/conf.d
+                readOnly: false
       
