--- a/clusters/galaxy-cluster/kubernetes/apps/default/sparkyfitness/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/default/sparkyfitness/app/helmrelease.yaml
@@ -56,7 +56,7 @@ spec:
               repository: ghcr.io/codewithcj/sparkyfitness-frontend
               tag: v0.15.7.3@sha256:c78e3ec294aa5c1983bd418c898e966c7bf45ba5017214ff88538073819a32b8
             env:
-              SPARKY_FITNESS_SERVER_HOST: sparky-backend.default.svc.cluster.local
+              SPARKY_FITNESS_SERVER_HOST: sparkyfitness-backend-app.default.svc.cluster.local
               SPARKY_FITNESS_SERVER_PORT: *port-backend
               TZ: ${SECRET_TZ}
             resources:
