Fix(GC): Add another folder needed by nginx

--- a/clusters/galaxy-cluster/kubernetes/apps/default/sparkyfitness/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/default/sparkyfitness/app/helmrelease.yaml
@@ -142,4 +142,11 @@ spec:
             frontend-app:
               - path: /run
                 readOnly: false
+      clientTemp:
+        type: emptyDir
+        advancedMounts:
+          sparky-frontend:
+            frontend-app:
+              - path: /var/cache/nginx
+                readOnly: false
       
