Fix(GC): Fix the naming of sparkyfitness volume

--- a/clusters/galaxy-cluster/kubernetes/apps/default/sparkyfitness/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/default/sparkyfitness/app/helmrelease.yaml
@@ -142,7 +142,7 @@ spec:
             frontend-app:
               - path: /run
                 readOnly: false
-      clientTemp:
+      cache:
         type: emptyDir
         advancedMounts:
           sparky-frontend:
