--- a/clusters/galaxy-cluster/kubernetes/apps/default/sparkyfitness/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/default/sparkyfitness/app/helmrelease.yaml
@@ -69,6 +69,11 @@ spec:
               readOnlyRootFilesystem: true
               capabilities: { drop: ["ALL"] }
     defaultPodOptions:
+      hostAliases:
+        - ip: "10.21.0.40"
+          hostnames:
+            - "fitness.${SECRET_DOMAIN}"
+            - "auth.${SECRET_DOMAIN}"
       securityContext:
         runAsNonRoot: true
         runAsUser: 1000
