--- a/clusters/galaxy-cluster/kubernetes/apps/auth/authelia/app/oidc-secrets.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/auth/authelia/app/oidc-secrets.yaml
@@ -18,6 +18,6 @@ spec:
       key: "393998a4-806f-4de7-ad15-b35901698db7"
   - secretKey: sparky_oidc_secret_digeset
     remoteRef:
-      key: "37f3b59e2-4d28-407e-8f33-b37b01740264"
+      key: "7f3b59e2-4d28-407e-8f33-b37b01740264"
 
       
