--- a/clusters/galaxy-cluster/kubernetes/apps/auth/authelia/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/auth/authelia/app/helmrelease.yaml
@@ -174,3 +174,4 @@ spec:
                 - profile
                 - email
               userinfo_signed_response_alg: 'none'
+              token_endpoint_auth_method: 'client_secret_post'
