--- a/clusters/galaxy-cluster/kubernetes/apps/auth/authelia/app/oidc-secrets.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/auth/authelia/app/oidc-secrets.yaml
@@ -19,5 +19,8 @@ spec:
   - secretKey: sparky_oidc_secret_digeset
     remoteRef:
       key: "7f3b59e2-4d28-407e-8f33-b37b01740264"
+  - secretKey: mealie_oidc_secret_digeset
+    remoteRef:
+      key: "01afff5c-8afc-418d-bd74-b37d017c5977"
 
       
