--- a/clusters/galaxy-cluster/kubernetes/apps/default/kustomization.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/default/kustomization.yaml
@@ -3,7 +3,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ./vibe-job-lp/ks.yaml
-  - ./invidious/ks.yaml
+#  - ./invidious/ks.yaml
   - ./sonarr/ks.yaml
   - ./prowlarr/ks.yaml
   - ./radarr/ks.yaml
