Fix(GC): Add mealie dns name to container dns names

--- a/clusters/galaxy-cluster/kubernetes/apps/default/sparkyfitness/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/default/sparkyfitness/app/helmrelease.yaml
@@ -74,6 +74,7 @@ spec:
           hostnames:
             - "fitness.${SECRET_DOMAIN}"
             - "auth.${SECRET_DOMAIN}"
+            - "mealie.${SECRET_DOMAIN}"
       securityContext:
         runAsNonRoot: true
         runAsUser: 1000
