--- a/clusters/galaxy-cluster/kubernetes/apps/default/split-pro/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/default/split-pro/app/helmrelease.yaml
@@ -28,7 +28,7 @@ spec:
           app:
             image:
               repository: ghcr.io/oss-apps/splitpro
-              tag: 1.5.3@sha256:4a456087fee1b25dbfb1f383fcb4e0785c4adaad9dacbda745bc9595d7d2cae0
+              tag: v1.5.3@sha256:4a456087fee1b25dbfb1f383fcb4e0785c4adaad9dacbda745bc9595d7d2cae0
             env:
               NEXTAUTH_URL: https://split.${SECRET_DOMAIN}
               DEFAULT_HOMEPAGE: /home
