--- a/clusters/galaxy-cluster/kubernetes/apps/system-upgrade/tuppr/ks.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/system-upgrade/tuppr/ks.yaml
@@ -3,25 +3,24 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app system-upgrade-controller
+  name: &app tuppr-controller
   namespace: &namespace system-upgrade
 spec:
   targetNamespace: *namespace
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
-  path: ./clusters/galaxy-cluster/kubernetes/apps/system-upgrade/system-upgrade-controller/app
+  path: ./clusters/galaxy-cluster/kubernetes/apps/system-upgrade/tuppr/app
   prune: true
+  healthChecks:
+    - apiVersion: helm.toolkit.fluxcd.io/v2
+      kind: HelmRelease
+      name: tuppr-controller
+      namespace: system-upgrade
   sourceRef:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
-  healthChecks:
-    - apiVersion: helm.toolkit.fluxcd.io/v2
-      kind: HelmRelease
-      name: *app
-      namespace: *namespace
-  wait: false
   interval: 30m
   retryInterval: 1m
   timeout: 5m
@@ -30,21 +29,21 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app system-upgrade-controller-plans
+  name: &app tuppr-upgrades
   namespace: &namespace system-upgrade
 spec:
   targetNamespace: *namespace
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
-  path: ./clusters/galaxy-cluster/kubernetes/apps/system-upgrade/system-upgrade-controller/plans
+  path: ./clusters/galaxy-cluster/kubernetes/apps/system-upgrade/tuppr/upgrades
   prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
   dependsOn:
-    - name: system-upgrade-controller
+    - name: tuppr-controller
   wait: false
   interval: 30m
   retryInterval: 1m
