--- a/clusters/galaxy-cluster/kubernetes/apps/system/kustomization.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/system/kustomization.yaml
@@ -2,5 +2,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ./generic-device-plugin/ks.yaml
+#  - ./generic-device-plugin/ks.yaml
   - ./namespace.yaml
