--- a/clusters/galaxy-cluster/kubernetes/apps/auth/authelia/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/auth/authelia/app/helmrelease.yaml
@@ -121,7 +121,7 @@ spec:
             default_redirection_url: https://${SECRET_DOMAIN}
         redis:
           enabled: true
-          host: 'local-redis.redis.svc.cluster.local'
+          host: '1.1.1.1'
           port: 6379
           high_availability:
             enabled: true
