--- a/clusters/galaxy-cluster/kubernetes/apps/kube-system/cilium/config/kustomization.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/kube-system/cilium/config/kustomization.yaml
@@ -2,11 +2,15 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - ./cilium-bgp-advertisement.yaml
+  - ./cilium-bgp-peerconfig.yaml
+  - ./cilium-bgp-clusterconfig.yaml
   - ./cilium-l2-lan.yaml
   - ./cilium-l2-local.yaml
   - ./cilium-l2-known.yaml
   - ./cilium-l2-public.yaml  
   - ./lan-pool.yaml
+  - ./internal-pool.yaml
   - ./local-pool.yaml
   - ./known-pool.yaml
   - ./public-pool.yaml
