--- a/clusters/galaxy-cluster/kubernetes/apps/network/blocky/app/helm-values.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/network/blocky/app/helm-values.yaml
@@ -100,6 +100,22 @@ service:
         port: 53
         protocol: TCP
     type: LoadBalancer
+
+  app-internal:
+    controller: blocky
+    labels:
+      bgp: internal
+    annotations:
+      "lbipam.cilium.io/sharing-key": "blocky-shared-known"
+      "lbipam.cilium.io/ips": "192.168.67.11"
+    ports:
+      dns-udp:
+        port: 53
+        protocol: UDP
+      dns-tcp:
+        port: 53
+        protocol: TCP
+    type: LoadBalancer
   
   metrics:
     controller: blocky
