Feat(GC): Remove multus mosquitto setup and add a bgp based loadbalancer, also update externalTrafficPolicy

--- a/clusters/galaxy-cluster/kubernetes/apps/auth/lldap/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/auth/lldap/app/helmrelease.yaml
@@ -78,6 +78,7 @@ spec:
           "lbipam.cilium.io/ips": "192.168.67.13"
         labels:
           bgp: internal
+        externalTrafficPolicy: Local
         ports:
           ldaps:
             port: 6360
