--- a/clusters/galaxy-cluster/kubernetes/apps/network/blocky/app/helm-values.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/network/blocky/app/helm-values.yaml
@@ -57,6 +57,7 @@ service:
     controller: blocky
     labels:
       bgp: internal
+    externalTrafficPolicy: Local
     annotations:
       "lbipam.cilium.io/sharing-key": "blocky-shared-known"
       "lbipam.cilium.io/ips": "192.168.67.11"
