--- a/clusters/galaxy-cluster/kubernetes/apps/kube-system/cilium/config/internal-pool.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/kube-system/cilium/config/internal-pool.yaml
@@ -7,6 +7,8 @@ spec:
   blocks:
   - start: "192.168.67.1"
     stop: "192.168.67.62"
+  - start: "10.11.0.5"
+    stop: "10.11.0.8"
   serviceSelector:     
     matchExpressions:
       - { key: bgp, operator: In, values: [ internal ] }
